--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.30.0",
+    "firebase": "^10.6.0",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^17.0.2",
