--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.6.0",
+    "moment": "^2.29.4",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^17.0.2",
