--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
